# tatlin-test

./: .gitignore  CMakeLists.txt  README.md  config.json  file-tape.cpp  file-tape.hpp  main.cpp  sorter.hpp  tape.hpp  test-default.cpp  test-file-tape.cpp  test-sorter.cpp  test_output  test_tape.txt
configs/: config.json  default_delays.json  test_delays.json
src/: file-tape.cpp  file-tape.hpp  main.cpp  sorter.hpp  tape.hpp
tests/: test-file-tape.cpp  test-sorter.cpp
